# Shiki

./: .gitignore  AGENTS.md  BLUEPRINT.md  CLAUDE.md  LICENSE  README.md  pack.sh  pyproject.toml  shiki.config.yaml  unpack.md
core-kernel/: README.md
core-kernel/_lib/: __init__.py  config.py  context.py  evidence.py  feature_plan.py  kernel.py  markdown.py  paths.py  prompt_builder.py  task_contracts.py  task_tools.py  workflow_executor.py
core-kernel/runtime/: README.md  context_loading.md  design_contract.md  execution_session.md  phase_contract.md
core-kernel/runtime/task_contracts/: README.md
core-kernel/templates/feature/: README.md  (+4 more)
core-kernel/workflows/: README.md
docs/: AGENT_README.md  BLUEPRINT.md  CHEATSHEET.md  CODEBOMB_POC_DESIGN.md  PHILOSOPHY.md  README.md  v4-architecture.md  v4-ideal-design.md  v4-runtime-flows.md
providers/: README.md  __init__.py  claude.py  codex.py  process.py
shiki_cli/: __init__.py  cli.py
tech-stacks/: README.md
tech-stacks/tech-contracts/: README.md
tests/: SHIKI_FLOW_TESTS.md  test_task_contracts.py  test_v4_runtime.py
tools-skills/: README.md
tools-skills/scripts/: batch_analyze.py  codebomb.py  codebomb_mcp.py  codebomb_requirements.txt  codebomb_smoke.py  init.py  install_agent_adapter.py  install_codebomb_deps.py  new_feature.py  pack_source.sh  pretty_shiki_spec.py  publish_docs.py  scan.py  simulate_scenarios.py  verify.py
user-interface/: README.md
user-interface/adapters/: claude_code_adapter.md  codex_adapter.md  gemini_cli_adapter.md  opencode_adapter.md  tool_adapter_contract_v1.md
(+130 files in other folders)
